# label-2903-789798

./: .cursorignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.ps1
backend/: Dockerfile  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  models.py  routes.py
database/: nev_data.db
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: filter-refresh.spec.js
frontend/src/css/: style.css
frontend/src/js/: chart-loader.js  chart-theme.js  main.js
frontend/src/templates/: admin_data.html  admin_reviews.html  admin_settings.html  admin_users.html  alert_center.html  base.html  change_password.html  data_quality.html  energy_ranking.html  index.html  login.html  quarterly_report.html  register.html
